<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.CurrentWeatherFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="666dp"
            android:layout_gravity="center"

             />

        <RelativeLayout
            android:id="@+id/fragmentRootView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            >

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/fragment_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:background="@android:color/transparent"

                app:subtitle="Wed 30 September 2:26 pm"
                app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Subhead"
                app:subtitleTextColor="@android:color/black"
                app:title="Jamshedpur , India"
                app:titleTextAppearance="@style/TextAppearance.AppCompat.Title"

                app:titleTextColor="@android:color/black" />

            <LinearLayout
                android:id="@+id/lyPic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fragment_toolbar"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="54dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/ivWeatherIcon"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/tvTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/celcius"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lyPic"
                android:layout_centerInParent="true"
                android:layout_margin="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:text="Rainy"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tvTemp_max_Temp_min"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="10dp"
                    android:text="@string/temperature"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tvPressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:text="@string/pressure"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvHumidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:text="@string/humidity"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvWindSpeed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:text="@string/wind_speed"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:text="@string/sunrise"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:text="@string/sunset"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>