<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardElevation="10dp"
    app:cardCornerRadius="10dp"
    app:cardBackgroundColor="@android:color/holo_blue_bright"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Wed 30 September 2:26 pm"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:layout_alignParentEnd="true"
            android:textAlignment="center"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/lyPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="103dp"
            android:layout_below="@id/tvDate"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/RCivWeatherIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_vertical"
                android:layout_margin="10dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/RCtvTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/celcius"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:layout_below="@id/lyPic"
            android:orientation="vertical">

            <TextView
                android:id="@+id/RCtvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:text="Rainy"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/RCtvTemp_max_Temp_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_margin="5dp"
                android:text="@string/temperature"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />



            <TextView
                android:id="@+id/RCtvPressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:text="@string/pressure"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/RCtvHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:text="@string/humidity"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/RCtvWindSpeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:text="@string/wind_speed"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </RelativeLayout>
</androidx.cardview.widget.CardView>