<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.SearchForecast">

    <LinearLayout
        android:id="@+id/et"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etCityName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:hint="City Name"
            android:layout_weight="1"
            android:textColorHint="@android:color/black"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:textSize="20sp"
            />

        <ImageView
            android:id="@+id/ivSearchWeather"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/ic_baseline_search_24"
            app:tint="@android:color/black" />

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/et">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/SearchProgressCircular"
                android:layout_width="wrap_content"
                android:layout_height="590dp"
                android:layout_gravity="center"
                android:visibility="gone"
                />

            <RelativeLayout
                android:id="@+id/SearchRootView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                >

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/SearchFragmentToolbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="10dp"
                    android:background="@android:color/transparent"

                    app:subtitle="Wed 30 September 2:26 pm"
                    app:subtitleTextAppearance="@style/TextAppearance.AppCompat.Subhead"
                    app:subtitleTextColor="@android:color/black"
                    app:title="Jamshedpur , India"
                    app:titleTextAppearance="@style/TextAppearance.AppCompat.Title"

                    app:titleTextColor="@android:color/black" />

                <LinearLayout
                    android:id="@+id/lyPic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/SearchFragmentToolbar"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="54dp"
                    android:layout_marginTop="9dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/Search_ivWeatherIcon"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/Search_tvTemperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/celcius"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lyPic"
                    android:layout_centerInParent="true"
                    android:layout_margin="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Search_tvDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="10dp"
                        android:text="Rainy"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/Search_tvTemp_max_Temp_min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="10dp"
                        android:text="@string/temperature"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/Search_tvPressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="10dp"
                        android:text="@string/pressure"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Search_tvHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="10dp"
                        android:text="@string/humidity"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Search_tvWindSpeed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="10dp"
                        android:text="@string/wind_speed"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Search_tvSunrise"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="10dp"
                        android:text="@string/sunrise"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/Search_tvSunset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="10dp"
                        android:text="@string/sunset"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>